--- a/src/app/Components/Associese/quem-pode-se-associar/quem-pode-se-associar.component.css
+++ b/src/app/Components/Associese/quem-pode-se-associar/quem-pode-se-associar.component.css
@@ -1,5 +1,7 @@
 *{
     background-color: var(--neutra);
+    
+    
 }
 
 .container {
@@ -37,4 +39,57 @@ section p {
     margin-right: -10px;
     width: 800px;
     height: 500px;
+}
+
+
+/* Responsividade */
+
+@media (max-width: 768px){
+    .container{
+        flex-direction: column;
+        height: auto;
+        margin-block-end:50px ;
+    }
+
+    .text{
+        font-size: 8vh;
+        margin: 0px 5px;
+    }
+
+    section p{
+        font-size: 4vh;
+        margin: 0px 10px;
+    }
+
+    .imagem{
+        width:100%;
+        height: 100%;
+        text-align: center;
+    }
+
+    .imagem img{
+        width:50vw;
+        height: auto;
+        margin: 0px;
+        
+    }
+}
+
+@media (max-width: 480px){
+    .container{
+        height: auto;
+    }
+
+    .text{
+        font-size: 5vh;
+    }
+
+    section p{
+        font-size: 3vh;
+    }
+
+    .imagem{
+        height: 100%;
+        margin: auto;
+    }
 }
