Modificações para subir o site para a LocaWeb

--- a/src/app/Components/Associese/direito-e-deveres/direito-e-deveres.component.html
+++ b/src/app/Components/Associese/direito-e-deveres/direito-e-deveres.component.html
@@ -1,26 +1,28 @@
 <div class="container">
     <section aria-labelledby="direitos-deveres">
         <header>
-            <h1 id="direitos-deveres">Direitos e Deveres</h1>
+            <h1 id="direitos-deveres">Conheça os nossos VALORES</h1>
         </header>
 
         <article>
             <ul>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, mollitia. Sit animi quos tenetur,
-                    dolore eius nemo repellat at voluptates. Odio qui distinctio ipsam quia voluptatum veniam eligendi
-                    voluptatem harum!</li>
+                <h5>Defender as empresas associadas de competições desleais.</h5>
+                <li>Defender as empresas associadas de
+                  práticas comerciais injustas não só
+                  promove um campo de atuação mais
+                  equitativo para todos, mas também
+                  protege a integridade e a reputação
+                  do setor.</li>
 
-                <li>Autem quae quidem soluta, minima aliquid quas dicta incidunt, dolorum amet mollitia doloremque error
-                    nobis! Saepe cum nam laudantium, quos, molestiae harum atque, optio soluta quo tenetur quae enim
-                    fugiat!</li>
-
-                <li>Illum, autem repudiandae! Vel incidunt quis sit rerum, quas minima repellendus, velit aliquid hic
-                    qui ratione cupiditate, sapiente quibusdam eum earum. Ad fugit repellat vitae dicta perspiciatis
-                    magnam quisquam voluptates!</li>
-
-                <li>Iure consequatur dignissimos necessitatibus nesciunt voluptas at quod tempore sapiente ab deserunt
-                    maiores esse veritatis reprehenderit, tempora porro delectus fugiat nostrum ullam exercitationem
-                    praesentium laboriosam! Consectetur perferendis ea suscipit esse!</li>
+                <h5>Representar os associados junto a órgãos do governo, para uniformizar as ações das empresas nas esferas governamentais.</h5>
+                <li>A ABICCA assume papel de porta-voz,
+                  buscando influenciar e uniformizar
+                  políticas e regulamentações para
+                  beneficiar os setores que representa,
+                  um compromisso com a liderança
+                  ativa, a defesa dos interesses do setor
+                  e o desenvolvimento de um ambiente
+                  de negócios favorável.</li>
             </ul>
         </article>
     </section>
