--- a/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.html
+++ b/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.html
@@ -2,9 +2,7 @@
     <div class="container">
         <section>
             <h1 class="text">Seja um associado!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam sint a esse vel consequuntur,
-                repudiandae distinctio nostrum officia voluptates quasi veritatis cumque iure odio harum expedita cum ab
-                quod sit.
+            <p>Podem se associar à ABICCA indústrias que fabricam cabos de aço, fibras, correntes e acessórios para movimentação de cargas; empresas que comercializam, inspecionam ou realizam manutenção desses produtos; e universidades ou centros de pesquisa envolvidos em atividades de interesse para o setor.
             </p>
             <div class="video-container">
                 <iframe src=" https://www.youtube.com/embed/hv9oXhhOCWs?si=UAl7QDq6I043NfIK"
@@ -14,13 +12,13 @@
             </div>
         </section>
 
-        <div class="box-line-footer">
+        <!-- <div class="box-line-footer">
             <div class="btn">
                 <a class="social-btn">Quem pode se associar?</a>
                 <a class="social-btn">Empresas Associadas</a>
                 <a class="social-btn">Direito e Deveres</a>
                 <a class="social-btn">Contatos</a>
             </div>
-        </div>
+        </div> -->
     </div>
 </footer>
