--- a/src/app/Components/rodape/rodape.component.html
+++ b/src/app/Components/rodape/rodape.component.html
@@ -6,14 +6,14 @@
 
 <div class="footer">
     <div class="interface">
-        <section class="line-footer1">
+        <!-- <section class="line-footer1">
             <h2>Quer receber notícias sobre o mundo ABICCA?</h2>
             <p>Inscreva-se na Newsletter e receba as principais notícias do mundo ABICCA diariamente em seu e-mail:</p>
             <form action="">
                 <input type="email" name="id" required>
                 <input type="submit" value="Cadastrar">
             </form>
-        </section>
+        </section> -->
 
         <div class="line-footer2">
             <div class="box-line-footer">
