--- a/src/app/Components/sobrenos/sobre-nos.component.html
+++ b/src/app/Components/sobrenos/sobre-nos.component.html
@@ -2,16 +2,29 @@
     <h1>Sobre Nós</h1>
 
     <div class="about-section">
-        <p>Somos uma empresa dedicada a oferecer soluções de qualidade para nossos clientes. Com uma equipe qualificada e motivada, trabalhamos para superar expectativas e criar um impacto positivo em tudo o que fazemos.</p>
+        <p>Criada em 2020, a Associação Brasileira da
+          Indústria de Cabos, Correntes e Acessórios
+          (ABICCA) tem como MISSÃO agrupar os fabricantes
+          de cabos de aço, cabos de fibras, correntes e lingas
+          de amarração e movimentação de carga em geral,
+          seus componentes e acessórios, universidades,
+          centros de pesquisa e laboratórios, formando um
+          ecossistema robusto de inovação, qualidade e
+          segurança.
+          Nos articulamos para ter representação junto aos
+          órgãos governamentais, para promover a educação
+          e a capacitação de profissionais, e promover
+          normas técnicas que asseguram a padronização e a
+          ampla segurança dos produtos do setor.</p>
     </div>
 
     <div class="cta-section">
         <h2>Transforme sua experiência conosco!</h2>
         <p>Entre em contato e descubra como podemos ajudar sua empresa a crescer.</p>
-        <a href="#" class="button">Fale Conosco</a>
+        <a routerLink="/associese" class="button">Fale Conosco</a>
     </div>
 
-    <div class="values-section">
+    <!-- <div class="values-section">
         <h2>Nossos Valores</h2>
         <ul>
             <li>Compromisso com a excelência</li>
@@ -20,5 +33,5 @@
             <li>Trabalho em equipe</li>
             <li>Integridade e transparência</li>
         </ul>
-    </div>
+    </div> -->
 </div>
