--- a/src/app/Components/Associese/direito-e-deveres/direito-e-deveres.component.css
+++ b/src/app/Components/Associese/direito-e-deveres/direito-e-deveres.component.css
@@ -8,27 +8,34 @@
 }
 
 .container {
-    max-width: 1500px;
-    margin: -49px auto 0 ;
-    padding: 0 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  max-width: 1500px;
+  margin: 50px auto 0 ;
+  padding: 0 20px;
+  justify-content: space-between;
+  align-items: flex-start;
+  border: 1px solid black;
 }
 
-header h1{ 
+header h1{
     font-size: 40px;
     margin: 0;
     padding: 20px 0;
     font-weight: bold;
     /* color: var(--texto3); */
-    color: #5D4037  ;
+    color: var(--primaria)  ;
     margin-bottom: 20px;
 }
+
 
 article ul {
     list-style-type: none;
     padding-left: 0;
+}
+
+article ul h5 {
+  color: var(--primaria);
 }
 
 article ul li {
