--- a/src/app/Components/Associese/formulario/formulario.component.css
+++ b/src/app/Components/Associese/formulario/formulario.component.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     max-width: 1500px;
-    margin: 4vh auto;
+    margin: 50px auto 0;
     padding: 2vh;
     background-color: #ffffff;
     border-radius: 1vh;
