--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -2,7 +2,7 @@
   <app-sobre></app-sobre>
   <app-associados></app-associados>
   <app-noticia></app-noticia>
-  <app-navio></app-navio>
+  <!-- <app-navio></app-navio> -->
   <app-imagens2 [images]="images2"
   [autoSlide]="true"
   [controls]="true"></app-imagens2>
