--- a/src/app/Components/noticias/blog/blog.component.css
+++ b/src/app/Components/noticias/blog/blog.component.css
@@ -1,85 +1,135 @@
-* {
-    box-sizing: border-box;
-    background-color: var(--neutra);
-}
-
+/* Estilos gerais */
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 40px 20px; /* Aumenta o espaçamento interno */
-    text-align: center;
+  width: 80%; /* Centralizando o container */
+  margin: 0 auto;
+  padding: 20px;
+  font-family: Arial, sans-serif;
 }
 
-section {
-    max-width: 600px;
-    margin-bottom: 30px; /* Espaço adicional abaixo da seção */
+.header {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-.text {
-    font-size: 40px;
-    font-weight: bold;
-    color: #003366; 
-    margin: 20px auto 20px; /* Espaço em volta do título */
+.grid-container {
+  display: grid;
+  min-height: 460px;
+  grid-template-columns: repeat(2, 1fr); /* Duas colunas para as notícias */
+  gap: 20px; /* Espaçamento entre as notícias */
+  justify-content: center;
+  /* border: 1px solid black; */
 }
 
-section p {
-    color: #003366; 
-    line-height: 1.8; /* Maior espaçamento entre linhas */
-    font-size: 17px;
-    margin-top: 0;
-    margin-bottom: 15px; /* Espaço adicional abaixo do parágrafo */
+.item-list {
+/* border: 1px solid black; */
 }
 
-.video-container {
-    margin-top: 20px;
+.noticia {
+  display: flex;
+  background-color: #f4f4f4;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px; /* Espaço inferior entre as notícias */
+  transition: transform 0.3s ease;
+  align-items: center; /* Alinha o conteúdo verticalmente */
+  max-width: 500px; /* Tamanho máximo da div de notícias */
+  height: 200px; /* Altura fixa menor */
+  /* border: 1px solid black; */
 }
 
-.video-container iframe {
-    width: 100%;
-    height: 250px;
-    max-width: 500px;
+.noticia:hover {
+  transform: translateY(-5px); /* Efeito hover */
 }
 
-.box-line-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-    gap: 20px;
+.img {
+  flex: 0 0 120px;
 }
 
-.btn {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+.img img {
+  width: 100%; /* A imagem ocupa todo o espaço da div img */
+  height: 100%; /* Preenche toda a altura disponível */
+  border-radius: 8px;
+  object-fit: cover;
 }
 
-.social-btn {
-    display: block;
-    padding: 20px 15px;
-    background-color: #fdb943;
-    color: #003366;
-    border: none;
-    border-radius: 5px;
-    text-align: center;
-    font-weight: bold;
-    transition: background-color 0.3s, color 0.3s;
-    text-decoration: none;
-    width: 100%;
-    max-width: 300px;
-    margin: 10px 0; /* Espaçamento vertical ao redor de cada botão */
+.texto {
+  flex-grow: 1; /* O texto ocupa o espaço restante */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 15px;
 }
 
-.social-btn:hover {
-    background-color: var(--terciaria);
-    color: #fff;
+.texto h3 {
+  font-size: 1.2rem; /* Aumentando o tamanho da fonte do título */
+  margin-bottom: 8px;
+  line-height: 1.5em;
+}
+
+.texto p {
+  font-size: 1rem; /* Aumentando o tamanho da fonte da descrição */
+  margin: 0;
+}
+.texto a {
+  text-decoration: none;
+  color: #007BFF;
+}
+
+.texto a:hover {
+  text-decoration: underline;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
+.popup-noticia .mat-dialog-container{
+  border: 10px solid black;
+}
+
+/* Estilo de paginação */
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination a {
+  color: #333;
+  padding: 8px 16px;
+  text-decoration: none;
+  border: 1px solid #ddd;
+  margin: 0 4px;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+.pagination a.active {
+  background-color: #007BFF;
+  color: white;
+  border: 1px solid #007BFF;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+}
+
+/* Estilo para a data abaixo da imagem */
+.data {
+  display: flex;
+  align-items: center;
+  font-size: 0.9rem; /* Tamanho da fonte ajustado */
+  color: #666;
+  margin-top: 5px; /* Espaço entre a imagem e a data */
+}
+
+.data i {
+  margin-right: 5px; /* Espaço entre o ícone e a data */
 }
 
 /* Responsividade */
-@media (max-width: 768px) {
+@media only screen and (min-width: 480px) and (max-width: 768px) {
     .container {
         padding: 15px; /* Mantém o espaçamento interno em telas médias */
     }
@@ -97,7 +147,7 @@ section p {
     }
 }
 
-@media (max-width: 480px) {
+@media only screen and (max-width: 480px) {
     .container {
         padding: 20px; /* Reduz o espaçamento interno em telas pequenas */
     }
@@ -120,7 +170,7 @@ section p {
 }
 
 /* Responsividade para iPads (telas entre 768px e 1024px) */
-@media (min-width: 768px) and (max-width: 1024px) {
+@media only screen and  (min-width: 768px) and (max-width: 1280px) {
     .container {
         padding: 40px 30px; /* Ajuste do padding para manter espaço adequado */
     }
