--- a/src/app/Components/sobrenos/sobre-nos.component.css
+++ b/src/app/Components/sobrenos/sobre-nos.component.css
@@ -6,11 +6,14 @@
 }
 
 :host {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background: linear-gradient(135deg, #f4f4f9, #e0e0e0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-image: var(--pattern1);
+  background-repeat: repeat;
+  background-position: center;
+  background-color: var(--terciaria);
 }
 
 .container {
@@ -38,6 +41,7 @@ h1 {
 }
 
 .about-section p {
+  text-align: justify;
     font-size: 1.2rem;
     line-height: 1.6;
     color: #555;
