Teste deploy noticia "saiba mais."

--- a/src/app/Components/noticia/noticia.component.html
+++ b/src/app/Components/noticia/noticia.component.html
@@ -17,7 +17,7 @@
             <p class="descricao">{{descricao.substring(0,400) + '...'}}</p>
 
             <div class="botao-container">
-                <button class="botao">Saiba mais</button>
+                <button class="botao">Saiba mais.</button>
             </div>
         </div>
     </div>
