--- a/src/app/Components/noticias/popup-noticia/popup-noticia.component.html
+++ b/src/app/Components/noticias/popup-noticia/popup-noticia.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="esquerda">
-        <img [src]="item.link_Imgs[0]" alt="" class="imagem">
+        <img [src]="'Galeria/Noticias/' + item.link_Imgs[0]" alt="" class="imagem">
     </div>
     <div class="direita">
       <span class="titulo">{{item.titulo}}</span>
