--- a/src/app/Administracao/corpo-login/form-modal/form-modal.component.html
+++ b/src/app/Administracao/corpo-login/form-modal/form-modal.component.html
@@ -5,19 +5,38 @@
       <mat-label>Título</mat-label>
       <input matInput [(ngModel)]="newItem.titulo" name="titulo" required>
     </mat-form-field>
+
     <mat-form-field>
       <mat-label>Data</mat-label>
       <input matInput [(ngModel)]="newItem.data" name="data" required>
     </mat-form-field>
+
     <mat-form-field class="input-desc">
       <mat-label>Descrição</mat-label>
       <textarea class="caixa-texto" matInput [(ngModel)]="newItem.descricao" name="descricao" required></textarea>
     </mat-form-field>
-    <mat-form-field>
-      <mat-label>Links de Imagens</mat-label>
+
+    <!-- Seleção entre Link de Imagem ou Upload -->
+    <mat-radio-group [(ngModel)]="imageOption" name="imageOption" required>
+      <mat-radio-button value="link">Link de Imagem</mat-radio-button>
+      <mat-radio-button value="upload">Upload de Imagem</mat-radio-button>
+    </mat-radio-group>
+
+    <!-- Campo para Link de Imagem -->
+    <mat-form-field *ngIf="imageOption === 'link'">
+      <mat-label>Link da Imagem</mat-label>
       <input matInput [(ngModel)]="newItem.link_Imgs" name="link_Imgs" required>
     </mat-form-field>
-    <button mat-button type="submit">{{ newItem.id ? 'Atualizar Item' : 'Adicionar Item' }}</button>
+
+    <!-- Campo para Upload de Imagem -->
+    <div *ngIf="imageOption === 'upload'" class="upload-field">
+      <!-- <label for="file-input">Imagem</label> -->
+      <input id="file-input" type="file" (change)="onFileSelected($event)" required>
+    </div>
+
+    <button mat-button type="submit" [disabled]="isSubmitting">
+      {{ isSubmitting ? 'Enviando...' : (newItem.id ? 'Atualizar Item' : 'Adicionar Item') }}
+    </button>
     <button mat-button type="button" (click)="onCancel()">Cancelar</button>
   </form>
 </mat-dialog-content>
