--- a/src/app/Components/noticias/popup-noticia/popup-noticia.component.css
+++ b/src/app/Components/noticias/popup-noticia/popup-noticia.component.css
@@ -7,6 +7,7 @@
   column-gap: 3%;
   background-image: linear-gradient(185deg, #a0a0a0, #f5f5f5);
   box-sizing: border-box; /* Inclui padding e borda nas dimensões totais */
+  /* border: 1px solid gray; */
 }
 
 .esquerda {
