--- a/src/app/Components/Associese/formulario/formulario.component.css
+++ b/src/app/Components/Associese/formulario/formulario.component.css
@@ -102,19 +102,19 @@ textarea {
 
     .form-container {
         margin-right: 0;
-        margin-bottom: 5vh;
+        margin-bottom: 5vw;
     }
 
     .contato {
-        margin-top: 5vh;
+        margin-top: 5vw;
     }
 
     .contato p{
-        font-size: 3vh;
+        font-size: 3vw;
     }
 }
 
-@media (max-width: 768px) {
+@media  only screen and (min-width: 480px) and (max-width: 768px) {
     .form-container {
         flex: 1;
         margin-right: 0;
@@ -122,47 +122,47 @@ textarea {
 
     .contato {
         flex: 1;
-        margin-top: 5vh;
+        margin-top: 5vw;
     }
 
     label {
-        font-size: 2vh;
+        font-size: 2vw;
     }
 
     input[type="text"],
     input[type="email"],
     input[type="tel"],
     textarea {
-        font-size: 1.8vh;
+        font-size: 1.8vw;
     }
 
     .submit-btn {
-        font-size: 2vh;
+        font-size: 2vw;
     }
 }
 
-@media (max-width: 480px) {
+@media  only screen and (min-width: 200px) and  (max-width: 480px) {
     .container {
-        padding: 3vh;
+        padding: 3vw;
     }
 
     .form-container {
         margin-right: 0;
-        margin-bottom: 4vh;
+        margin-bottom: 4vw;
     }
 
     .contato {
-        margin-top: 3vh;
+        margin-top: 3vw;
     }
 
     input[type="text"],
     input[type="email"],
     input[type="tel"],
     textarea {
-        font-size: 1.5vh;
+        font-size: 1.5vw;
     }
 
     .submit-btn {
-        font-size: 1.8vh;
+        font-size: 1.8vw;
     }
 }
