--- a/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.css
+++ b/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.css
@@ -86,6 +86,7 @@ section p {
     .text {
         font-size: 30px;
         margin: 0px 10px;
+        line-height:1;
     }
 
     section {
@@ -117,6 +118,7 @@ section p {
 
     .text {
         font-size: 24px;
+        line-height:1;
     }
 
     section p {
