--- a/src/app/Components/noticias/blog/blog.component.css
+++ b/src/app/Components/noticias/blog/blog.component.css
@@ -20,10 +20,6 @@
   /* border: 1px solid black; */
 }
 
-.item-list {
-/* border: 1px solid black; */
-}
-
 .noticia {
   display: flex;
   background-color: #f4f4f4;
@@ -71,6 +67,7 @@
   font-size: 1rem; /* Aumentando o tamanho da fonte da descrição */
   margin: 0;
 }
+
 .texto a {
   text-decoration: none;
   color: #007BFF;
@@ -129,69 +126,114 @@ a:hover {
 }
 
 /* Responsividade */
+
+@media only screen and (min-width: 768px) and (max-width: 1280px){
+
+  .grid-container {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    width: 100%;
+}
+
+.noticia {
+    flex-direction: row;
+    width: 100%;
+    height:400px;
+    max-width: unset;
+}
+
+.container {
+    padding: 0px;
+    margin: 0 auto;
+}
+
+.texto h3 {
+    font-size: 3vw; /* Tamanho da fonte ajustado para 1080px */
+    line-height: 1.2;
+}
+
+.texto p {
+    font-size: 2vw;
+    line-height: 1.2;
+}
+
+.data {
+    font-size: 1.5vw;
+}
+
+.header h2 {
+    font-size: 4vw;
+}
+
+}
 @media only screen and (min-width: 480px) and (max-width: 768px) {
-    .container {
-        padding: 15px; /* Mantém o espaçamento interno em telas médias */
-    }
+  .grid-container {
+    grid-template-columns:1fr;
+  }
 
-    .text {
-        font-size: 30px;
-    }
+  .noticia{
+    flex-direction: column;
+    height:fit-content;
+ }
 
-    section {
-        max-width: 100%;
-    }
+  .container {
+    padding: 10px;
+}
 
-    .video-container iframe {
-        height: 200px;
-    }
+  .texto h3 {
+    font-size: 5vw;
+    line-height: 1;
+  }
+
+  .texto p{
+    font-size:3vw;
+    line-height: 1;
+  }
+
+  .data{
+    font-size:2vw;
+  }
+
+  .header h2{
+    font-size:5vw;
+  }
 }
 
 @media only screen and (max-width: 480px) {
-    .container {
-        padding: 20px; /* Reduz o espaçamento interno em telas pequenas */
-    }
-
-    .text {
-        font-size: 24px;
-    }
-
-    section p {
-        font-size: 15px;
-    }
-
-    .video-container iframe {
-        height: 180px;
-    }
-
-    .social-btn {
-        padding: 15px 10px;
-    }
+  .grid-container {
+    grid-template-columns: 1fr; /* Uma coluna em telas pequenas */
 }
 
-/* Responsividade para iPads (telas entre 768px e 1024px) */
-@media only screen and  (min-width: 768px) and (max-width: 1280px) {
-    .container {
-        padding: 40px 30px; /* Ajuste do padding para manter espaço adequado */
-    }
+.noticia{
+   flex-direction: column;
+   height:fit-content;
+}
 
-    .text {
-        font-size: 32px; /* Reduz ligeiramente o tamanho do texto para caber melhor */
-    }
+.container {
+    padding: 10px;
+}
 
-    section {
-        max-width: 700px; /* Limita a largura para ficar mais proporcional na tela */
-    }
+.texto h3 {
+    font-size: 5vw;
+    line-height: 1;
+}
 
-    .video-container iframe {
-        height: 220px; /* Ajuste de altura do vídeo para melhor visualização */
-    }
+.header h2{
+   font-size:8vw;
+}
 
-    .social-btn {
-        max-width: 250px; /* Limita a largura dos botões para melhor alinhamento */
-    }
+.texto p {
+   font-size: 3vw;
+   line-height: 1;
+}
 
-    .box-line-footer {
-        gap: 15px; /* Diminui o espaço entre os botões */
-    }
+.data {
+   font-size:2.6vw;
+}
+
+.img img{
+   width: 70vw;
+}
+
 }
