Modificado sistema de banco de dados
Modificado para quando rodar localmente acessar o NOTICIAS_DEV e em produção o banco NOTICIAS

--- a/src/app/Components/associados/associados.component.html
+++ b/src/app/Components/associados/associados.component.html
@@ -2,11 +2,11 @@
     <div class="imagem">
         <h1>Associados</h1>
         <div class="imagem_ord">
-            <img src="BRASiLAMARRAS.png"/>
-            <img src="CSL.png" />
-            <img src="lankhorst_euronete_brasil_logo.png" />
-            <img src="VAN_BEEST.png" />
-            <img src="TEIJIN.png" />
+            <img src="assets/BRASiLAMARRAS.png"/>
+            <img src="assets/CSL.png" />
+            <img src="assets/lankhorst_euronete_brasil_logo.png" />
+            <img src="assets/VAN_BEEST.png" />
+            <img src="assets/TEIJIN.png" />
         </div>
     </div>
     <div class="texto">
