--- a/src/app/Components/menu-nav/menu-nav.component.html
+++ b/src/app/Components/menu-nav/menu-nav.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="toolbar">
-    <img class="abicca" src="icone_Reescalavel.png" alt="LogoABICCA" mat-button routerLink="/home">
+    <img class="abicca" src="assets/icone_Reescalavel.png" alt="LogoABICCA" mat-button routerLink="/home">
 
     <div class="buttons">
         <a routerLink="/home"><p>Home</p></a>
