--- a/src/app/Components/rodape/rodape.component.html
+++ b/src/app/Components/rodape/rodape.component.html
@@ -17,7 +17,7 @@
 
         <div class="line-footer2">
             <div class="box-line-footer">
-                <img src="icone2.png" alt="Logotipo ABICCA">
+                <img src="assets/icone2.png" alt="Logotipo ABICCA">
                 <p>Firmes, lutando por um mercado mais justo e seguro.</p>
             </div>
 
