--- a/src/app/Components/Associese/quem-pode-se-associar/quem-pode-se-associar.component.html
+++ b/src/app/Components/Associese/quem-pode-se-associar/quem-pode-se-associar.component.html
@@ -9,7 +9,7 @@
         </section>
 
         <div class="imagem">
-            <img src="LogoABICCA.png" alt="">
+            <img src="assets/LogoABICCA.png" alt="">
         </div>
     </div>
 </footer>
