--- a/src/app/Components/noticias/popup-noticia/popup-noticia.component.html
+++ b/src/app/Components/noticias/popup-noticia/popup-noticia.component.html
@@ -9,6 +9,6 @@
           <span class="data-text">{{item.data}}</span>
       </div>
       <div class="descricao" #descricaoRef>{{item.descricao}}</div>
-      <div class="scroll-indicator" *ngIf="isScrollable">&#x2193;</div> <!-- Seta para baixo -->
+      <div class="scroll-indicator" *ngIf="isScrollable">&#x2193;</div>
     </div>
 </div>
