--- a/src/app/Components/home/home.component.css
+++ b/src/app/Components/home/home.component.css
@@ -3,10 +3,13 @@
   padding: 0;
   width: 100%;
   /* background-image: linear-gradient(135deg, var(--primaria), var(--secundaria), var(--terciaria)); */
-  background-image: var(--pattern1);
-  /* background-size: cover; */
-  background-repeat: repeat;
-  /* background-attachment: fixed; */
-  background-position: center;
-  background-color: var(--terciaria);
+}
+
+
+@media only screen and (min-width:1800px){
+  .corpo{
+    max-width: var(--widthCorpo);
+    margin: auto;
+
+  }
 }
