--- a/src/app/Components/noticia/noticia.component.html
+++ b/src/app/Components/noticia/noticia.component.html
@@ -4,7 +4,9 @@
     </div>
 
     <div class="cartao">
-        <img [src]="'Galeria/Noticias/' + DATA[0].link_Imgs[0]!" alt="">
+        <div class="imagem">
+          <img [src]="'Galeria/Noticias/' + DATA[0].link_Imgs[0]!" alt="">
+        </div>
 
         <div class="conteudo">
             <a href="#" class="titulo">
