--- a/src/app/Components/noticia/noticia.component.css
+++ b/src/app/Components/noticia/noticia.component.css
@@ -31,16 +31,25 @@
 }
 
 /* Estilo da imagem da notícia */
+.cartao .imagem {
+  display: flex;
+  min-width: 30%;
+  max-width: 50%;
+  padding: 0 0 0 2%;
+}
+
 .cartao img {
-    width: 400px; /* Aumenta o tamanho da imagem */
-    height: auto;
-    border-radius: 12px;
+  width: 100%; /* Aumenta o tamanho da imagem */
+  margin: auto;
+  border-radius: 12px;
+  object-fit: cover;
 }
 
 /* Estilo do conteúdo da notícia */
 .conteudo {
-    flex-grow: 1;
-    padding: 30px; /* Aumenta o preenchimento interno */
+  width: 70%;
+  flex-grow: 1;
+  padding: 30px; /* Aumenta o preenchimento interno */
 }
 
 /* Estilo do título da notícia */
