--- a/src/app/Components/noticias/blog/blog.component.css
+++ b/src/app/Components/noticias/blog/blog.component.css
@@ -1,9 +1,10 @@
 /* Estilos gerais */
 .container {
-  width: 80%; /* Centralizando o container */
+  width: 100%; /* Centralizando o container */
   margin: 0 auto;
   padding: 20px;
   font-family: Arial, sans-serif;
+  background-color: white;
 }
 
 .header {
@@ -26,10 +27,11 @@
   padding: 10px;
   border-radius: 8px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px; /* Espaço inferior entre as notícias */
+  margin: auto;
   transition: transform 0.3s ease;
   align-items: center; /* Alinha o conteúdo verticalmente */
   max-width: 500px; /* Tamanho máximo da div de notícias */
+  min-width: 500px;
   height: 200px; /* Altura fixa menor */
   /* border: 1px solid black; */
 }
@@ -134,6 +136,7 @@ a:hover {
     flex-direction: column;
     /* align-items: center; */
     width: 100%;
+
 }
 
 .noticia {
@@ -144,8 +147,8 @@ a:hover {
 }
 
 .container {
-    padding: 0px;
-    margin: 0 auto;
+  padding: 10px;
+  margin: 0 auto;
 }
 
 .texto h3 {
@@ -208,6 +211,7 @@ a:hover {
 .noticia{
    flex-direction: column;
    height:fit-content;
+   min-width: unset;
 }
 
 .container {
@@ -236,4 +240,11 @@ a:hover {
    width: 70vw;
 }
 
+}
+
+
+@media only screen and (min-width: 1921px){
+.container {
+  width: 1920px;
+}
 }
