--- a/src/app/Components/sobre/sobre.component.css
+++ b/src/app/Components/sobre/sobre.component.css
@@ -167,7 +167,7 @@
 }
 
 
-@media only screen and  (min-width: 1280px) and (max-width: 2580){
+/* @media only screen and  (min-width: 2000px) and (max-width: 4000px){
 
   .container {
     background-size: cover;
@@ -202,4 +202,4 @@
     font-size: 0.5em;
   }
 
-}
+} */
